# SynthPlayground

./: .gitignore  NewProject.jucer
Source/: ADSRVisualiserComponent.cpp  ADSRVisualiserComponent.h  ADSRVisualizerSlider.cpp  ADSRVisualizerSlider.h  ADSRVisualizerSliderLaF.h  CMakeLists.txt  MainLayoutDrawer.cpp  MainLayoutDrawer.h  OscSound.h  OscVoice.cpp  OscVoice.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthParameters.h  UIEventsListener.h  WaveSelectionButtonLaF.h  Waveforms.h
